test/modules/standard/Random/stonea/fillRandom.good
fillRandom.chpl:3: error: module 'Random' must be used before accessing its symbols
fillRandom.chpl:4: error: module 'Random' must be used before accessing its symbols
