test/modules/standard/Random/stonea/fillRandom.chpl
use Random;

var A : [1..10] real;
var B : [1..10, 1..10] real;
fillRandom(A);
fillRandom(B);

